<resources>
    <string name="app_name">Currency Calculator</string>
    <string name="sign_up">Sign up</string>
    <string name="navigation_icon">Navigation Icon</string>
    <string name="currency_calculator_image">Currency Calculator Image</string>
    <string name="pln">PLN</string>
    <string name="_1">1</string>
    <string name="eur">EUR</string>
    <string name="circle">circle</string>
    <string name="expand">expand</string>
    <string name="convert">Convert</string>
    <string name="realtime"><u>Mid-market exchange rate at 13:31 UTC</u></string>
    <string name="loading">Loading...</string>
    <string name="close_sign_up">Close Sign Up</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="start_registration">Start Registration</string>
    <string name="made_with_by_developersunesis">Made with ❤️ by Developersunesis</string>
    <string name="view_chart">View Chart</string>
    <string name="documentation">Documentation</string>
    <string name="dash">0.0</string>
    <string name="enter_amount">Enter amount</string>
    <string name="alert"><u>Get rate alerts straight to your email inbox - Subscribe</u></string>
    <string name="eur_30_days_chart">EUR - 30 days Chart</string>
    <string name="subscribe">Subscribe</string>
</resources>
