<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Appbar/Navigation icon-->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageButton
                    android:id="@+id/nav_button"
                    android:layout_width="32dp"
                    android:layout_height="48dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/sidebar_icon"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/navigation_icon" />

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="20dp"
                    android:paddingTop="9dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:text="@string/sign_up" />
            </RelativeLayout>

            <!--CurrencyCalculator Image-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/currency_calculator_image"
                android:src="@drawable/home_icon"
                android:layout_marginTop="30dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="150dp"
                android:paddingEnd="150dp"/>

            <!--EditText View 1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                android:layout_marginTop="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/fromEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_amount"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:padding="15dp"
                    android:textSize="22sp"
                    android:textColorHint="@color/hint_color"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/eur"
                    android:textColor="@color/hint_color"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical|end"
                    android:padding="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:layout_marginEnd="5dp"
                    android:id="@+id/fromCurrencyText"/>
            </LinearLayout>

            <!--EditText View 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/toEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dash"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:padding="15dp"
                    android:textSize="22sp"
                    android:textColorHint="@color/hint_color"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:enabled="false"/>

                <TextView
                    android:id="@+id/toCurrencyText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pln"
                    android:textColor="@color/hint_color"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical|end"
                    android:padding="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:layout_marginEnd="5dp" />
            </LinearLayout>

            <!--Exchange Section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <include layout="@layout/conversion_section"/>
            </LinearLayout>

            <Button
                android:id="@+id/convert"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="35dp"
                android:textColor="@color/white"
                android:text="@string/convert"
                android:textSize="22sp"
                android:background="@drawable/button_bg"
                android:textAllCaps="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:text="@string/realtime"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_alert_black_24dp"/>
            </LinearLayout>
        </LinearLayout>


        <com.google.android.material.navigation.NavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/chartView"
            android:visibility="gone"
            android:background="@color/white">

            <TextView
                android:id="@+id/chartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eur_30_days_chart"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="35dp"
                android:textSize="22sp"/>

            <ImageButton
                android:id="@+id/closeChart"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_width="32dp"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_close_black_24dp"
                android:background="#00000000"
                android:layout_gravity="end"
                android:scaleType="fitCenter"
                android:contentDescription="@string/close_sign_up" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/closeChart"
                android:layout_marginTop="100dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="50dp">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_margin="20dp"
                        android:background="@color/colorPrimary"/>

                    <EditText
                        android:id="@+id/subscribeEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:background="@drawable/edittext_bg"
                        android:padding="15dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:textSize="22sp"
                        android:textColorHint="@color/hint_color"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:layout_below="@id/chart"/>

                    <Button
                        android:id="@+id/subscribeButton"
                        android:layout_below="@id/subscribeEmail"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/subscribe"
                        android:textSize="22sp"
                        android:textColor="@color/white"
                        android:background="@drawable/subscribe_bg"
                        android:textAllCaps="false"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_below="@id/subscribeButton"
                        android:text="@string/alert"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </com.google.android.material.navigation.NavigationView>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:id="@+id/navigationView"
            android:visibility="gone"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="160dp"
                android:layout_marginEnd="160dp"
                android:background="@color/white">

                <ImageButton
                    android:id="@+id/close"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="32dp"
                    android:layout_height="48dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_close_black_24dp"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/close_sign_up" />

                <Button
                    android:id="@+id/chartViewButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="120dp"
                    android:background="@color/white"
                    android:text="@string/view_chart"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:shadowColor="@color/white"
                    style="?android:attr/borderlessButtonStyle"
                    />

                <Button
                    android:id="@+id/documentation"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="200dp"
                    android:background="@color/white"
                    android:text="@string/documentation"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:shadowColor="@color/white"
                    style="?android:attr/borderlessButtonStyle"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/made_with_by_developersunesis"
                    android:textColor="#afafaf"/>
            </RelativeLayout>
        </com.google.android.material.navigation.NavigationView>

    </FrameLayout>
</ScrollView>