<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="57dp" android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/select_currency_bg"
        android:layout_weight="1"
        android:id="@+id/fromCurrency">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/red_circle"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/circle"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/eur"
            android:id="@+id/fromCurrencyText1"
            android:textColor="#BDBDBD"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="5dp"
            android:layout_margin="7dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/expand"
            android:layout_marginRight="7dp"
            android:layout_marginEnd="7dp"
            android:src="@drawable/ic_expand_more_black_24dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_exchange_black_24dp"
        android:padding="10dp"
        android:layout_weight="1.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/select_currency_bg"
        android:layout_weight="1"
        android:id="@+id/toCurrency">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/green_circle"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/circle"/>

        <TextView
            android:id="@+id/toCurrencyText1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/pln"
            android:textColor="#BDBDBD"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="5dp"
            android:layout_margin="7dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginRight="7dp"
            android:layout_marginEnd="7dp"
            android:src="@drawable/ic_expand_more_black_24dp"
            android:contentDescription="@string/expand" />
    </LinearLayout>
</LinearLayout>