<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Appbar/Navigation bar-->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_registration"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_margin="25dp"
                android:textSize="22sp"/>

            <ImageButton
                android:id="@+id/close"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_width="32dp"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_close_black_24dp"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:contentDescription="@string/close_sign_up" />

        </RelativeLayout>

        <!--CurrencyCalculator Image-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/currency_calculator_image"
            android:src="@drawable/home_icon"
            android:layout_marginTop="30dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="150dp"
            android:paddingEnd="150dp"/>

        <!--Username-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_person_black_24dp"
                android:textColor="@color/hint_color"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:layout_marginEnd="5dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:layout_margin="5dp"
                android:background="#00000000"
                android:padding="15dp"
                android:textSize="22sp"
                android:textColorHint="@color/hint_color"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!--Password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_security_black_24dp"
                android:textColor="@color/hint_color"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:layout_marginEnd="5dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:layout_margin="5dp"
                android:background="#00000000"
                android:padding="15dp"
                android:textSize="22sp"
                android:textColorHint="@color/hint_color"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </LinearLayout>


        <!--Password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_security_black_24dp"
                android:textColor="@color/hint_color"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:layout_marginEnd="5dp"/>

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:layout_margin="5dp"
                android:background="#00000000"
                android:padding="15dp"
                android:textSize="22sp"
                android:textColorHint="@color/hint_color"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </LinearLayout>

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="35dp"
            android:text="@string/sign_up"
            android:textSize="22sp"
            android:background="@drawable/button_bg"
            android:textAllCaps="false"/>

    </LinearLayout>
</ScrollView>